bindings/c/include/sqlite3.h

typedef struct sqlite3 sqlite3;
typedef struct sqlite3_stmt sqlite3_stmt;
typedef int (*exec_callback)(void *context, int n_column, char **argv, char **colv);
int sqlite3_close(sqlite3 *db);
int sqlite3_close_v2(sqlite3 *db);
const char *sqlite3_db_filename(sqlite3 *db, const char *db_name);
int sqlite3_trace_v2(sqlite3 *_db,
                     unsigned int _mask,
                     void (*_callback)(unsigned int, void*, void*, void*),
                     void *_context);
void sqlite3_progress_handler(sqlite3 *_db, int _n, int (*_callback)(void *), void *_context);
int sqlite3_busy_timeout(sqlite3 *_db, int _ms);
int sqlite3_set_authorizer(sqlite3 *db,
                           int (*xAuth)(void*, int, const char*, const char*, const char*, const char*),
                           void *pUserData);
void *sqlite3_context_db_handle(void *_context);
int sqlite3_finalize(sqlite3_stmt *stmt);
int sqlite3_exec(sqlite3 *db, const char *sql, exec_callback _callback, void *_context, char **_err);
int sqlite3_clear_bindings(sqlite3_stmt *stmt);
int sqlite3_changes(sqlite3 *_db);
int64_t sqlite3_changes64(sqlite3 *_db);
int sqlite3_deserialize(sqlite3 *_db, const char *_schema, const void *_in_, int _in_bytes, unsigned int _flags);
int sqlite3_db_config(sqlite3 *db, int op, ...);
int sqlite3_extended_result_codes(sqlite3 *db, int onoff);
sqlite3 *sqlite3_db_handle(sqlite3_stmt *_stmt);
int sqlite3_errcode(sqlite3 *_db);
const char *sqlite3_errstr(int _err);
void *sqlite3_backup_init(sqlite3 *_dest_db, const char *_dest_name, sqlite3 *_source_db, const char *_source_name);
int sqlite3_backup_step(void *_backup, int _n_pages);
int sqlite3_backup_remaining(void *_backup);
int sqlite3_backup_pagecount(void *_backup);
int sqlite3_backup_finish(void *_backup);
char *sqlite3_expanded_sql(sqlite3_stmt *stmt);
int sqlite3_data_count(sqlite3_stmt *stmt);
int sqlite3_bind_parameter_count(sqlite3_stmt *_stmt);
const char *sqlite3_bind_parameter_name(sqlite3_stmt *_stmt, int _idx);
int sqlite3_bind_parameter_index(sqlite3_stmt *_stmt, const char *_name);
int sqlite3_bind_null(sqlite3_stmt *_stmt, int _idx);
int sqlite3_bind_int64(sqlite3_stmt *_stmt, int _idx, int64_t _val);
int sqlite3_bind_double(sqlite3_stmt *_stmt, int _idx, double _val);
int sqlite3_bind_text(sqlite3_stmt *_stmt, int _idx, const char *_text, int _len, void *_destroy);
int sqlite3_bind_blob(sqlite3_stmt *_stmt, int _idx, const void *_blob, int _len, void *_destroy);
int sqlite3_column_type(sqlite3_stmt *_stmt, int _idx);
int sqlite3_column_count(sqlite3_stmt *_stmt);
const char *sqlite3_column_decltype(sqlite3_stmt *_stmt, int _idx);
const char *sqlite3_column_name(sqlite3_stmt *_stmt, int _idx);
const char *sqlite3_column_table_name(sqlite3_stmt *_stmt, int _idx);
int64_t sqlite3_column_int64(sqlite3_stmt *_stmt, int _idx);
double sqlite3_column_double(sqlite3_stmt *_stmt, int _idx);
const void *sqlite3_column_blob(sqlite3_stmt *_stmt, int _idx);
int sqlite3_column_bytes(sqlite3_stmt *_stmt, int _idx);
void *sqlite3_column_value(sqlite3_stmt *_stmt, int _idx);
const unsigned char *sqlite3_column_text(sqlite3_stmt *stmt, int idx);
void *sqlite3_aggregate_context(void *_context, int _n);
int sqlite3_blob_open(sqlite3 *_db,
                      const char *_db_name,
                      const char *_table_name,
                      const char *_column_name,
                      int64_t _rowid,
                      int _flags,
                      void **_blob_out);
int sqlite3_blob_read(void *_blob, void *_data, int _n, int _offset);
int sqlite3_blob_write(void *_blob, const void *_data, int _n, int _offset);
int sqlite3_blob_bytes(void *_blob);
int sqlite3_blob_close(void *_blob);
int sqlite3_create_collation_v2(sqlite3 *_db,
                                const char *_name,
                                int _enc,
                                void *_context,
                                int (*_cmp)(void),
                                void (*_destroy)(void));
int sqlite3_create_function_v2(sqlite3 *_db,
                               const char *_name,
                               int _n_args,
                               int _enc,
                               void *_context,
                               void (*_func)(void),
                               void (*_step)(void),
                               void (*_final_)(void),
                               void (*_destroy)(void));
int sqlite3_create_window_function(sqlite3 *_db,
                                   const char *_name,
                                   int _n_args,
                                   int _enc,
                                   void *_context,
                                   void (*_x_step)(void),
                                   void (*_x_final)(void),
                                   void (*_x_value)(void),
                                   void (*_x_inverse)(void),
                                   void (*_destroy)(void));
const char *sqlite3_errmsg(sqlite3 *_db);
int sqlite3_extended_errcode(sqlite3 *_db);
int sqlite3_complete(const char *_sql);