bindings/dart/lib/src/bindings.g.dart

// Generated by package:ffigen from ../c/include/sqlite3.h. Do not edit.
// ignore_for_file: type=lint, unused_field, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:turso/src/bindings.g.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, ffi.Int)>()
external ffi.Pointer<ffi.Void> sqlite3_aggregate_context(
  ffi.Pointer<ffi.Void> _context,
  int _n,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_backup_finish(
  ffi.Pointer<ffi.Void> _backup,
);

@ffi.Native<
    ffi.Pointer<ffi.Void> Function(ffi.Pointer<sqlite3>, ffi.Pointer<ffi.Char>,
        ffi.Pointer<sqlite3>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Void> sqlite3_backup_init(
  ffi.Pointer<sqlite3> _dest_db,
  ffi.Pointer<ffi.Char> _dest_name,
  ffi.Pointer<sqlite3> _source_db,
  ffi.Pointer<ffi.Char> _source_name,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_backup_pagecount(
  ffi.Pointer<ffi.Void> _backup,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_backup_remaining(
  ffi.Pointer<ffi.Void> _backup,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>()
external int sqlite3_backup_step(
  ffi.Pointer<ffi.Void> _backup,
  int _n_pages,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Int, ffi.Pointer<ffi.Void>,
        ffi.Int, ffi.Pointer<ffi.Void>)>()
external int sqlite3_bind_blob(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
  ffi.Pointer<ffi.Void> _blob,
  int _len,
  ffi.Pointer<ffi.Void> _destroy,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Int, ffi.Double)>()
external int sqlite3_bind_double(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
  double _val,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Int, ffi.Int64)>()
external int sqlite3_bind_int64(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
  int _val,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external int sqlite3_bind_null(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_bind_parameter_count(
  ffi.Pointer<sqlite3_stmt> _stmt,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Pointer<ffi.Char>)>()
external int sqlite3_bind_parameter_index(
  ffi.Pointer<sqlite3_stmt> _stmt,
  ffi.Pointer<ffi.Char> _name,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external ffi.Pointer<ffi.Char> sqlite3_bind_parameter_name(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Int, ffi.Pointer<ffi.Char>,
        ffi.Int, ffi.Pointer<ffi.Void>)>()
external int sqlite3_bind_text(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
  ffi.Pointer<ffi.Char> _text,
  int _len,
  ffi.Pointer<ffi.Void> _destroy,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_blob_bytes(
  ffi.Pointer<ffi.Void> _blob,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_blob_close(
  ffi.Pointer<ffi.Void> _blob,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int64,
        ffi.Int,
        ffi.Pointer<ffi.Pointer<ffi.Void>>)>()
external int sqlite3_blob_open(
  ffi.Pointer<sqlite3> _db,
  ffi.Pointer<ffi.Char> _db_name,
  ffi.Pointer<ffi.Char> _table_name,
  ffi.Pointer<ffi.Char> _column_name,
  int _rowid,
  int _flags,
  ffi.Pointer<ffi.Pointer<ffi.Void>> _blob_out,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int)>()
external int sqlite3_blob_read(
  ffi.Pointer<ffi.Void> _blob,
  ffi.Pointer<ffi.Void> _data,
  int _n,
  int _offset,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int)>()
external int sqlite3_blob_write(
  ffi.Pointer<ffi.Void> _blob,
  ffi.Pointer<ffi.Void> _data,
  int _n,
  int _offset,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>, ffi.Int)>()
external int sqlite3_busy_timeout(
  ffi.Pointer<sqlite3> _db,
  int _ms,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_changes(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_changes64(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_clear_bindings(
  ffi.Pointer<sqlite3_stmt> stmt,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_close(
  ffi.Pointer<sqlite3> db,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_close_v2(
  ffi.Pointer<sqlite3> db,
);

@ffi.Native<
    ffi.Pointer<ffi.Void> Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external ffi.Pointer<ffi.Void> sqlite3_column_blob(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external int sqlite3_column_bytes(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_column_count(
  ffi.Pointer<sqlite3_stmt> _stmt,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external ffi.Pointer<ffi.Char> sqlite3_column_decltype(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<ffi.Double Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external double sqlite3_column_double(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external int sqlite3_column_int64(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external ffi.Pointer<ffi.Char> sqlite3_column_name(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external ffi.Pointer<ffi.Char> sqlite3_column_table_name(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<
    ffi.Pointer<ffi.UnsignedChar> Function(
        ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external ffi.Pointer<ffi.UnsignedChar> sqlite3_column_text(
  ffi.Pointer<sqlite3_stmt> stmt,
  int idx,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external int sqlite3_column_type(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<
    ffi.Pointer<ffi.Void> Function(ffi.Pointer<sqlite3_stmt>, ffi.Int)>()
external ffi.Pointer<ffi.Void> sqlite3_column_value(
  ffi.Pointer<sqlite3_stmt> _stmt,
  int _idx,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>)>()
external int sqlite3_complete(
  ffi.Pointer<ffi.Char> _sql,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>()
external ffi.Pointer<ffi.Void> sqlite3_context_db_handle(
  ffi.Pointer<ffi.Void> _context,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.NativeFunction<ffi.Int Function()>>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>)>()
external int sqlite3_create_collation_v2(
  ffi.Pointer<sqlite3> _db,
  ffi.Pointer<ffi.Char> _name,
  int _enc,
  ffi.Pointer<ffi.Void> _context,
  ffi.Pointer<ffi.NativeFunction<ffi.Int Function()>> _cmp,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _destroy,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>)>()
external int sqlite3_create_function_v2(
  ffi.Pointer<sqlite3> _db,
  ffi.Pointer<ffi.Char> _name,
  int _n_args,
  int _enc,
  ffi.Pointer<ffi.Void> _context,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _func,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _step,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _final_,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _destroy,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>,
        ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>)>()
external int sqlite3_create_window_function(
  ffi.Pointer<sqlite3> _db,
  ffi.Pointer<ffi.Char> _name,
  int _n_args,
  int _enc,
  ffi.Pointer<ffi.Void> _context,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _x_step,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _x_final,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _x_value,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _x_inverse,
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> _destroy,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_data_count(
  ffi.Pointer<sqlite3_stmt> stmt,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>, ffi.Int)>()
external int sqlite3_db_config(
  ffi.Pointer<sqlite3> db,
  int op,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<sqlite3>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> sqlite3_db_filename(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<ffi.Char> db_name,
);

@ffi.Native<ffi.Pointer<sqlite3> Function(ffi.Pointer<sqlite3_stmt>)>()
external ffi.Pointer<sqlite3> sqlite3_db_handle(
  ffi.Pointer<sqlite3_stmt> _stmt,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<sqlite3>, ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Void>, ffi.Int, ffi.UnsignedInt)>()
external int sqlite3_deserialize(
  ffi.Pointer<sqlite3> _db,
  ffi.Pointer<ffi.Char> _schema,
  ffi.Pointer<ffi.Void> _in_,
  int _in_bytes,
  int _flags,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_errcode(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<sqlite3>)>()
external ffi.Pointer<ffi.Char> sqlite3_errmsg(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int)>()
external ffi.Pointer<ffi.Char> sqlite3_errstr(
  int _err,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<sqlite3>, ffi.Pointer<ffi.Char>, exec_callback,
        ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external int sqlite3_exec(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<ffi.Char> sql,
  exec_callback _callback,
  ffi.Pointer<ffi.Void> _context,
  ffi.Pointer<ffi.Pointer<ffi.Char>> _err,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<sqlite3_stmt>)>()
external ffi.Pointer<ffi.Char> sqlite3_expanded_sql(
  ffi.Pointer<sqlite3_stmt> stmt,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_extended_errcode(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>, ffi.Int)>()
external int sqlite3_extended_result_codes(
  ffi.Pointer<sqlite3> db,
  int onoff,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_finalize(
  ffi.Pointer<sqlite3_stmt> stmt,
);
